# optional_struct_recursive

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: release-pr.yaml  release.yaml
optionable/: CHANGELOG.md  Cargo.toml  README.md
optionable/src/: chrono.rs  lib.rs  optionable.rs  serde_json.rs
optionable/tests/: lib.rs
optionable_derive/: CHANGELOG.md  Cargo.toml  README.md
optionable_derive/src/: derive.rs  lib.rs
optional_struct_recursive/: Cargo.toml
optional_struct_recursive/src/: lib.rs
optional_struct_recursive/tests/: lib.rs
optional_struct_recursive_derive/: Cargo.toml
optional_struct_recursive_derive/src/: derive.rs  lib.rs
