[package]
name = "optionable"
version = "0.1.0"
edition = "2024"
description = "todo"
repository = "https://github.com/ngergs/optional-struct-recursive"
license = "MIT"
readme = "README.md"
publish = false

[lints.clippy]
pedantic = "warn"

[dependencies]
optionable_derive = "0.1.0"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
