[package]
name = "optionable"
version = "0.1.0"
edition = "2024"
description = "todo"
repository = "https://github.com/ngergs/optional-struct-recursive"
license = "MIT"
readme = "README.md"
publish = false

[features]
default = []
chrono = ["dep:chrono"]
serde_json = ["dep:serde_json"]

[lints.clippy]
pedantic = "warn"

[dependencies]
optionable_derive = "0.1.0"
chrono = { version = "0.4.41", default-features = false, optional = true }
serde_json = { version = "1.0.143", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
