[package]
name = "optionable"
version = "0.1.2"
edition = "2024"
description = "Derive macro (and associated marker trait) to derive nested structs/enums with all subfields being optional (e.g. for patches or Kubernetes server side apply)."
repository = "https://github.com/ngergs/optionable"
license = "MIT"
readme = "README.md"

[features]
default = []
chrono = ["dep:chrono"]
serde_json = ["dep:serde_json"]

[lints.clippy]
pedantic = "warn"

[dependencies]
optionable_derive = "0.1.0"
chrono = { version = "0.4.42", default-features = false, optional = true }
serde_json = { version = "1.0.143", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["std"] }
