[package]
name = "optionable_derive"
version = "0.1.0"
edition = "2024"
description = "Derive macro to derive nested structs with all subfields being optional (e.g. for patches or Kubernetes server side apply)."
repository = "https://github.com/ngergs/optionable"
license = "MIT"
readme = "README.md"

[lints.clippy]
pedantic = "warn"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.106"
proc-macro2 = "1.0.101"
darling = "0.21.3"